# tamux

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  chip_tests_output.txt  test_output.txt  test_result.txt
.github/: FUNDING.yml
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  spec-implementation-crosswalk.md  v1.0-UAT-FEEDBACK.md
.planning/milestones/: v2.0-ROADMAP.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md
crates/amux-cli/: Cargo.toml
crates/amux-daemon/: Cargo.toml
crates/amux-gateway/: Cargo.toml
crates/amux-mcp/: Cargo.toml
crates/amux-protocol/: Cargo.toml
crates/amux-protocol/src/: codec.rs  config.rs  lib.rs  messages.rs  update.rs
crates/amux-protocol/src/messages/: client.rs  daemon.rs  support.rs
crates/amux-protocol/src/messages/tests/: mod.rs
crates/amux-tui/: Cargo.toml  README.md
docs/: MEMORY.md  SOUL.md  agentic-mission-control.md  getting-started.md  goal-runners.md  how-tamux-works.md  index.html  plugin-development.md  reference.md  self-orchestrating-agent.md  speech-to-text-and-text-to-speech.md
docs/pages/: tui.html  (+17 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
npm-package/: PUBLISH.md  install-powershell.test.js  install-shell.test.js  install.js  install.test.js  package.json
scripts/: build-production-releases.sh  build-release-wsl.sh  build-release.bat  build-release.ps1  build-release.sh  bump-version.sh  dev.bat  dev.sh  install.ps1  install.sh
(+1433 files in other folders)
