[package]
name = "amux-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
dirs = "6"
